--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -187,7 +187,7 @@
 
 
 
-<!--<!DOCTYPE html>-->
+<!DOCTYPE html>-->
 <!--<html>-->
 <!--<head>-->
 <!--<meta charset="utf-8">-->
@@ -227,7 +227,7 @@
 <!--load()-->
 <!--</script>-->
 <!--</body>-->
-<!--</html>-->
+<!--</html>
 
 
 
@@ -242,7 +242,7 @@
 
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <title>Client Dashboard</title>
@@ -292,4 +292,4 @@ loadClients();
 setInterval(loadClients,5000);
 </script>
 </body>
-</html>
+</html> -->
